--- a/src/_includes/partials/site-foot.njk
+++ b/src/_includes/partials/site-foot.njk
@@ -1,4 +1,4 @@
-<footer class="site-foot content">
+<footer class="site-foot">
     © {{ helpers.currentYear() }} {{site.authorName}}
     <br>
     <a href="/changelog">smzr.co.uk</a>
