fixed footer href

--- a/src/_includes/partials/site-foot.njk
+++ b/src/_includes/partials/site-foot.njk
@@ -1,5 +1,5 @@
 <footer class="site-foot">
     © {{ helpers.currentYear() }} {{site.authorName}}
     <br>
-    <a href="/changelog">smzr.co.uk</a>
+    <a href="https://www.smzr.co.uk/">smzr.co.uk</a>
 </footer>
