--- a/src/scss/blocks/_game-title.scss
+++ b/src/scss/blocks/_game-title.scss
@@ -1,13 +1,21 @@
 .game-title {
-  display: inline-block;
-  font-size: 1.25em;
-  font-weight: 600;
-  margin: 1em 0 0.5em 0;
-  &.visited {
-    color: $blue;
-    &::before,
-    &::after {
-      background: $blue-light;
+  display: grid;
+  grid-template-columns: 1.25em max-content;
+  column-gap: 1rem;
+  margin-bottom: 0.5em;
+  img {
+    place-self: center;
+  }
+  a {
+    display: inline-block;
+    font-size: 1.25em;
+    font-weight: 600;
+    &.visited {
+      color: $blue;
+      &::before,
+      &::after {
+        background: $blue-light;
+      }
     }
   }
 }
